# mlp-sample

./: LICENSE  README.md  pyproject.toml
sample/: main.py
sample/routers/: named_entity.py  proofreading.py
sample/schemas/: proofreading.py
