[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["sypeh <syunpe.taro.1219@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.71.0"
uvicorn = "^0.16.0"
ginza = "^5.1.0"
ja-ginza = "^5.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
